# python-psycopgwrap

./: README  psycopgwrap.py  setup.cfg
