[metadata]
name = python-psycopgwrap
version = 1.04
author = Sean Reifschneider
author_email = jafo@tummy.com
summary = A wrapper around psycopg2 to make common things easier.
home_page = https://github.com/linsomniac/python-psycopgwrap

classifier = License :: Public Domain
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 2
    Intended Audience :: Developers

[files]
modules = psycopgwrap
extra_files = README

